<resources>
    <string name="app_name">Course NoteKeeper</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="close_drawer_description">Close navigation drawer</string>
    <string name="open_drawer_description">Open navigation drawer</string>
    <string name="note_title_hint">Note Title</string>
    <string name="note_text_hint">Note Text</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sync_header">Sync</string>
    <string name="general_header">General</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_email_address">Email Address</string>

    <!-- Sync Preferences -->

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_summary_social_recommendations">Recommendations for people to contact based on your message history</string>


    <string-array name="pref_entries_favourite_social">
        <item>Google</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_values_favourite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>

    <string name="pref_title_favourite_social">Favourite social network</string>

    <!-- Default naming -->
    <string name="pref_default_favourite_social">
        http://plus.google.com
    </string>
    <string name="default_display_name">Your name</string>
    <string name="default_email_address">yourmail@yahoo.com</string>
    <string name="send_as_email_text">Send as Email</string>
    <string name="cancel_text">Cancel</string>
    <string name="next_text">Next</string>
    <string name="set_reminder_text">Set reminder</string>
    <string name="notify_title">Note reminder: {exampleString}</string>
    <string name="notify_text">You said {exampleString} and lorem ipsum dolor sit amet...</string>
    <string name="channel_name">Review note channel</string>
    <string name="channel_description">This channel displays a notification for reviewing notes</string>

</resources>